src/test/ui/parser/removed-syntax-mode.rs
fn f(+x: isize) {}
//~^ ERROR expected argument name, found `+`

fn main() {}
